@@ -5,6 +5,8 @@
 - compat-27: Drop obsolete ~compat-call dired-get-marked-files~.
 - compat-29: Add ~with-restriction~ and ~without-restriction~.
 - compat-29: Drop ~with-narrowing~.
+- compat-27: Drop ~text-property-search-forward~ and ~-backward~. These functions
+  should be provided by a separate ~text-property-search~ ELPA package.
 
 * Release of "Compat" Version 29.1.3.4
 
